--- a/Task_4_2HD/client/index.html
+++ b/Task_4_2HD/client/index.html
@@ -77,8 +77,8 @@
         crossorigin="anonymous"></script>
 
     <script type="text/javascript">
-        let deviceID = "e00fce6838f249d6f6bbf8ea";
-        let accessToken = "24b18d043ccce783ccbce9eba611cf779744f835";
+        let deviceID = [REMOVED];
+        let accessToken = [REMOVED];
 
         function checkStatus() {
             var requestURL = "https://api.particle.io/v1/devices/" + deviceID + "/ping";
@@ -148,3 +148,4 @@
 </body>
 
 </html>
+
